<resources>
    <string name="app_name">TsjDom.Com</string>
    <string name="title_news">Новости</string>
    <string name="title_message">Сообщения</string>
    <string name="title_notifications">Notifications</string>
    <string name="error">Не извесная ошибка</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">История</string>
    <string name="history">История</string>
    <string name="save_7_53_2_11">7 небо, Токомбаева, д.53/2 кв 11</string>
    <string name="save_2425">Лицевой счет №2425</string>
    <string name="title_balance">Текущий баланс</string>
    <string name="title_bid">Мои заявки</string>
    <string name="families">Состав семьи</string>
    <string name="references">Справка</string>
    <string name="company_adres">г. Бишкек, Кыргызстан.\nул. Игембердиева 1а,\nБЦ "Аврора", офис 603, 604 </string>
    <string name="company_contacts">Контакты</string>
    <string name="company_phone">Телефон</string>
    <string name="company_numberphone">+996 (312) 97 - 92 - 39</string>
    <string name="company_mails">Поддержка: support@timelysoft.net\nМаркетинг: tsj@timelysoft.net</string>
    <string name="for_who">Кому</string>
    <string name="ur_email">Ваша почта</string>
    <string name="write_letter">Написать письмо</string>
    <string name="o_portal_tsj">Портал ТСЖ — это интернет-сайт для вашего товарищества (ТСЖ, СНТ и др.), на котором предусмотрены специальные механизмы для размещения, хранения и оперативного обмена информацией между правлением и членами ТСЖ. Удобный простой интерфейс позволяет быстро ориентироваться среди большого количества информации неподготовленному пользователю.</string>
    <string name="system_allows_tsj">Система позволяет членам ТСЖ контролировать деятельность ТСЖ, получать информацию о результатах, планах и текущей деятельности ТСЖ: годовые и квартальные отчеты, смету расходов и ее исполнение, план мероприятий ТСЖ, информационные объявления и т.д. В системе предусмотрены механизмы для обмена информацией между членами и Правлением ТСЖ, позволяющие в любое время подать заявку на ремонт или жалобу, задать вопрос Председателю ТСЖ и получить письменный ответ, высказать свое мнение и обсудить проблемы с другими членами ТСЖ на форуме. Участвовать в жизни ТСЖ позволит принятие решений с помощью Интернет-голосований. Кроме того на Портале ТСЖ собственники в любое время могут посмотреть баланс своего лицевого счета, ввести показания счетчиков, распечатать платежные квитанции и т.д. Использование Портала ТСЖ позволяет членам ТСЖ принимать активное участие в жизни ТСЖ и чувствовать себя полноправными хозяевами в своем доме.</string>
    <string name="chairman_accountant_tsj">Система позволяет Председателю ТСЖ составить смету расходов, опубликовать ее на Портале ТСЖ, обсудить ее с членами ТСЖ на форумах Портала, внести поправки, предварительно утвердить смету с помощью Интернет-голосования. На протяжении года бухгалтер сможет вносить фактические расходы и контролировать исполнение смет. Система автоматизации диспетчерской службы на Портале ТСЖ позволяет организовать прием, классификацию и анализ поступающей от собственников информации, установить контроль над работой поставщиков, что повысит качество коммунальных услуг и технического обслуживания. Размещение на страницах Портала различной информации для членов ТСЖ, сбор вопросов от членов ТСЖ в письменном виде взамен телефонных звонков и личных контактов наладит взаимоотношения между членами и Председателем ТСЖ. Кроме того, на Портале ТСЖ реализованы механизмы, позволяющие автоматически напоминать по электронной почте о необходимости ввода показаний счетчиков, оповещать членов ТСЖ о возникшей задолженности по лицевому счету, что поспособствует повышению собираемости платежей. В целом, использование Портала ТСЖ позволит повысить качество обслуживания.</string>
    <string name="while_creating_tsj">При создании Портала ТСЖ особое внимание было уделено вопросам безопасности и защиты информации:</string>
    <string name="portal_access_tsj">Доступ к Порталу ТСЖ предоставляется только авторизованным пользователям в соответствии с их правами. Каждый пользователь может просматривать информацию только о своем ТСЖ или о своем лицевом счет</string>
    <string name="encryption_keys_tsj">ключи шифрования хранятся отдельно от информационной базы, что предотвращает незаконное распространение информации</string>
    <string name="when_encrypting_information_tsj">при шифровании информации применяется уникальный для каждого лицевого счета ключ</string>
    <string name="is_stored_tsj">информация на Портале ТСЖ хранится в зашифрованном виде</string>
    <string name="about_portal">О портале</string>
    <string name="new_msg">Новое сообщение</string>
    <string name="contacts">Контакты</string>
    <string name="bid">Заявка</string>
    <string name="new_bid">Новая заявка</string>
    <string name="new_reference">Новая справка</string>
    <string name="heading">Заголовок</string>
    <string name="answer">ОТВЕТИТЬ</string>
    <string name="detail_msg">Сообщение</string>
    <string name="auth_to_contiune">авторизуйтесь чтобы продолжить</string>
    <string name="welcome">Добро пожаловать,</string>
    <string name="enter_email">Введите ваш e-mail</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="house">Дом</string>
    <string name="apartment">Квартира</string>
    <string name="title">Заголовок</string>
    <string name="for_who_msg">Кому написать письмо?</string>
    <string name="user">Пользователь</string>
    <string name="writeMsg">Написать письмо</string>
    <string name="msgForChairman">Сообщение председателю</string>
    <string name="msgForOwner">Сообщение собственнику</string>
    <string name="profile">Профиль</string>
    <string name="email">Email</string>
    <string name="changePassword">изменить пароль</string>
    <string name="exit">Выход</string>
    <string name="againPassword">Повторите новый пароль</string>
    <string name="save">Сохранить</string>
    <string name="vote">Голосование</string>
    <string name="listofbalance">Список лицевых счетов</string>
    <string name="inProcess">В ПРОЦЕССЕ</string>
    <string name="VoteEnd">ЗАВЕРШЕННЫЕ</string>
    <string name="urMean">Поделитесь своим мнением</string>
    <string name="voting">Голосование</string>
    <string name="vote_empty">Нету голосований</string>
    <string name="requestForConn">Заяка на подключение ТСЖ</string>
    <string name="urname">Ваше имя</string>
    <string name="tsjName">Наименования ТСЖ</string>
    <string name="address">Адрес</string>
    <string name="phone">Телефон</string>
    <string name="addressEmail">Адрес эл. почты</string>
    <string name="countApp">Количество квартир (лицевых счетов)</string>
    <string name="urFeedback">Ваше пожелания</string>
    <string name="send">ОТПРАВИТЬ</string>
    <string name="connect">Подключить</string>
    <string name="admin">Администрация сайта</string>
    <string name="news_test">Портал ТСЖ — это интернет-сайт для вашего товарищества (ТСЖ, СНТ и др.), на котором предусмотрены специальные механизмы для размещения, хранения и оперативного обмена информацией между правлением и членами ТСЖ</string>
    <string name="comments">КОМЕНТАРИИ:</string>
    <string name="news">Новость</string>
    <string name="fastenFiles">ПРИКРЕПЛЕННЫЕ ФАЙЛЫ:</string>
    <string name="comment">Коментрировать...</string>
    <string name="yesDelete">Да, удалить</string>
    <string name="no">Нет</string>
    <string name="template">Для того, чтобы создать собственный шаблон счета к оплате, создайте файл эксель и на места вывода данных вставьте ключевые слова, приведенные в списке (не обязательно использовать все слова):</string>
    <string name="estimate">Смета отражает движение поступлений и расходование целевых средств.</string>
    <string name="types_template">Уважаемый(-ые) [фио] вы должны [сумма] сомов по услуге \'[услуга]\'.</string>
</resources>
