<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:layout_width="112dp"
        android:layout_height="32dp"
        android:layout_margin="16dp"
        android:src="@drawable/tsj_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Пропустить"
        android:textColor="@color/orangeColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_static_welcome_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginHorizontal"
            android:layout_marginTop="70dp"
            android:maxLines="1"
            android:text="@string/welcome"
            android:textColor="@color/blackTextColor"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_static_welcome_textview_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginHorizontal"
            android:layout_marginTop="4dp"
            android:text="@string/auth_to_contiune"
            android:textColor="@color/blackTextColor"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_container_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginHorizontal"
            android:layout_marginTop="16dp">

            <AutoCompleteTextView
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_mail_24dp"
                android:drawablePadding="8dp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_container_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginHorizontal"
            android:layout_marginTop="13dp">

            <AutoCompleteTextView
                android:id="@+id/text_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_key_24dp"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/main_enter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginHorizontal"
            android:layout_marginTop="32dp"
            android:background="@color/orangeColor"
            android:text="@string/login"
            android:textColor="@color/whiteColor" />

        <TextView
            android:id="@+id/main_forgot_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:paddingBottom="@dimen/marginHorizontal"
            android:layout_marginEnd="@dimen/marginHorizontal"
            android:text="Забыли пароль?"
            android:textColor="@color/orangeColor"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>